@startuml
titleLabel Domain Model

class Table{
name
}


class Row{
name
type
allowsBlanks
defaultValue
}

class Cell{
value
}

class Column


Table "1" -- "0..*" Column: has
Table "1" -- "0..*" Row: has
Table "1" -- "0..*" Cell: has
Row "1" -- "0..*" Cell: has
Column "1" -- "0..*" Cell: has

@enduml